--- a/index_github.html
+++ b/index_github.html
@@ -14,7 +14,7 @@
         <!-- Header Section -->
         <div class="header">
             <h1>🚀 CRYPTO SIGNAL TRACKER</h1>
-            <p>💎 PROFESSIONAL SIGNAL TRACKER - TARIK Premium Analiza</p>
+            <p>💎 PROFESSIONAL SIGNAL TRACKER - Premium Analiza</p>
             <div class="status-bar">
                 <div class="live-indicator">
                     <div class="pulse"></div>
