Fix GitHub Pages - promenjen script path i očišten README

--- a/index.html
+++ b/index.html
@@ -275,6 +275,6 @@
     </div>
 
     <!-- Load GitHub Pages version of JavaScript -->
-    <script src="js/script_github.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
