--- a/index.html
+++ b/index.html
@@ -174,6 +174,17 @@
             <div class="predictions-panel">
                 <h2>🔮 PREDVIĐANJA I SIGNALI</h2>
                 
+                <!-- Glavni Ukupni Prediction -->
+                <div class="main-prediction">
+                    <h3>🎯 GLAVNI UKUPNI SIGNAL</h3>
+                    <div class="main-signal" id="main-signal">
+                        <div class="signal-icon">⏳</div>
+                        <div class="signal-text">Analiziram...</div>
+                        <div class="signal-confidence">--% pouzdanost</div>
+                        <div class="signal-description">Učitavam ukupnu analizu svih timeframe-ova...</div>
+                    </div>
+                </div>
+                
                 <!-- Overall Accuracy -->
                 <div class="overall-accuracy">
                     <h3>🎯 UKUPNA TAČNOST SIGNALA</h3>
