🔧 CHAT IMPROVEMENTS: Fixed sizing & enhanced UI
✅ FIXED:
- Chat container now properly sized (350x450px) instead of full screen
- Chat positioned in corner, not covering entire site
- Mobile responsive design improved

🎨 UI UPDATES:
- Chat title changed to 'GROUP CHAT'
- Added predictions refresh controls in header
- Better mobile breakpoints for chat
- Enhanced predictions panel styling

🚀 IMPROVEMENTS:
- Chat stays in bottom-right corner on all devices
- Auto-refresh dropdown for predictions
- Better responsive design for mobile
- Cleaner chat interface layout

--- a/index.html
+++ b/index.html
@@ -66,7 +66,18 @@
 
         <!-- Predictions Panel - MOVED TO TOP FOR PRIORITY -->
         <div class="predictions-panel">
-            <h2>🔮 PREDVIĐANJA I SIGNALI</h2>
+            <div class="predictions-header">
+                <h2>🔮 PREDVIĐANJA I SIGNALI</h2>
+                <div class="prediction-refresh-controls">
+                    <label for="prediction-refresh-rate">🔄 Auto-refresh:</label>
+                    <select id="prediction-refresh-rate" class="refresh-rate-select">
+                        <option value="15min">Svakih 15min</option>
+                        <option value="30min">Svakih 30min</option>
+                        <option value="1h" selected>Svaki sat</option>
+                        <option value="1d">Jednom dnevno</option>
+                    </select>
+                </div>
+            </div>
             
             <!-- Glavni Ukupni Prediction -->
             <div class="main-prediction">
