--- a/index.html
+++ b/index.html
@@ -42,27 +42,7 @@
             </div>
         </div>
 
-        <!-- Trading Guide - Moved here from sidebar -->
-        <div class="trading-guide minimized">
-            <div class="guide-header" onclick="toggleTradingGuide()">
-                <h3>📖 KAKO TRGOVATI SIGURNO</h3>
-                <span class="toggle-icon">▼</span>
-            </div>
-            <div class="trading-rules" id="trading-rules" style="display: none;">
-                <div class="rule green">
-                    <span class="rule-icon">🟢</span>
-                    <span class="rule-text"><strong>KUPUJ KADA:</strong> RSI &lt; 30 + Ukupna tačnost &gt; 70% + 📈 RAST predviđanje</span>
-                </div>
-                <div class="rule red">
-                    <span class="rule-icon">🔴</span>
-                    <span class="rule-text"><strong>PRODAJ KADA:</strong> RSI &gt; 70 + Ukupna tačnost &gt; 70% + 📉 PAD predviđanje</span>
-                </div>
-                <div class="rule yellow">
-                    <span class="rule-icon">⚠️</span>
-                    <span class="rule-text"><strong>ČEKAJ KADA:</strong> Kontradiktorna predviđanja ili tačnost &lt; 60%</span>
-                </div>
-            </div>
-        </div>
+        <!-- Trading Guide - Minimized -->
         <div class="trading-guide minimized">
             <div class="guide-header" onclick="toggleTradingGuide()">
                 <h3>📖 KAKO TRGOVATI SIGURNO</h3>
