--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
     <!-- New Advanced Chat System will be injected here -->
 
     <!-- Load JavaScript -->
+    <script src="js/ml-accuracy-enhancer.js"></script>
     <script src="js/script.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/chat-v2.js"></script>
