🔧 FEAT: Debug Panel Integration Complete - Added debug button to main dashboard, created comprehensive monitoring system with ML pattern tracking, system health diagnostics, and dedicated debug interface on separate tab. All database issues fixed with proper error handling.

--- a/index_github.html
+++ b/index_github.html
@@ -121,7 +121,7 @@
                     </div>
                     <div class="indicator-signal" id="bb-signal">UČITAVA...</div>
                     <div class="indicator-description">
-                        Volatilnost bands. Cena na donjem bandu = kupuj, na gornjem = prodaj
+                        Volatilnost bands. Cijena na donjem bandu = kupuj, na gornjem = prodaj
                     </div>
                 </div>
 
