🔧 CRITICAL FIX: PatternDatabase errors resolved + ML integration completed
✅ Fixed PatternDatabase errors:
- Enhanced error handling in loadPatternDatabase()
- Added proper JSON parsing with fallback recovery
- Improved savePatternDatabase() with corruption detection
- Added initializeEmptyDatabase() function for clean reset
- Enhanced createDebugBridge() with null checks

🧠 Completed ML integration:
- Added MLAccuracyEnhancer initialization in TradingDashboard
- Integrated ML pattern learning in generateSmartPredictions()
- Added ML tracking in trackPredictionAccuracy()
- Enhanced prediction objects with mlPattern IDs
- Added generatePatternId() function for unique pattern tracking

🎯 Navigation menu fully functional:
- Replaced popup windows with same-window navigation
- Professional navigation styling with gradients and hover effects
- Debug panel accessible via navigation menu instead of popups

📊 Debug log should now show:
- ✅ PatternDatabase LOADED/SAVED successfully
- 🧠 ML Pattern learning completed
- 🔗 DebugBridge updated successfully
- No more repeated PatternDatabase FAILED errors

All systems operational - ML learning active!

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         <div class="header">
             <h1>🚀 CRYPTO SIGNAL TRACKER</h1>
             <p>💎 PROFESSIONAL SIGNAL TRACKER - Premium Analiza</p>
+            
+            <!-- Navigation Menu -->
+            <div class="navigation-menu">
+                <a href="index.html" class="nav-link active">
+                    📊 DASHBOARD
+                </a>
+                <a href="debug.html" class="nav-link">
+                    🔧 DEBUG PANEL
+                </a>
+            </div>
+            
             <div class="status-bar">
                 <div class="live-indicator">
                     <div class="pulse"></div>
@@ -23,11 +34,6 @@
                 </div>
                 <div class="precision-meter">
                     <span class="precision-value" id="last-update-time">--:--:--</span>
-                </div>
-                <div class="debug-panel-access">
-                    <button onclick="openDebugPanel()" class="debug-btn" title="Otvori Debug Panel za Monitoring">
-                        🔧 DEBUG PANEL
-                    </button>
                 </div>
             </div>
         </div>
