--- a/debug.html
+++ b/debug.html
@@ -28,8 +28,52 @@
 
         .debug-header h1 {
             font-size: 2.5rem;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+
+        /* Navigation Menu for Debug Panel */
+        .navigation-menu {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 15px 0;
+            flex-wrap: wrap;
+        }
+
+        .nav-link {
+            background: linear-gradient(45deg, #2c3e50, #3498db);
+            color: white;
+            text-decoration: none;
+            padding: 12px 24px;
+            border-radius: 10px;
+            font-size: 1rem;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(52, 152, 219, 0.3);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            min-width: 150px;
+            text-align: center;
+            border: 2px solid transparent;
+        }
+
+        .nav-link:hover {
+            background: linear-gradient(45deg, #3498db, #2ecc71);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(52, 152, 219, 0.4);
+            border-color: rgba(255, 255, 255, 0.3);
+        }
+
+        .nav-link.active {
+            background: linear-gradient(45deg, #e74c3c, #f39c12);
+            box-shadow: 0 6px 20px rgba(231, 76, 60, 0.4);
+            border-color: rgba(255, 255, 255, 0.5);
+        }
+
+        .nav-link.active:hover {
+            background: linear-gradient(45deg, #f39c12, #e67e22);
+            transform: translateY(-2px);
         }
 
         .debug-navigation {
@@ -232,6 +276,16 @@
     <div class="debug-header">
         <h1>🔬 ADVANCED DEBUG PANEL</h1>
         <p>Real-time monitoring & diagnostics for Signal Analyzer</p>
+        
+        <!-- Navigation Menu -->
+        <div class="navigation-menu">
+            <a href="index.html" class="nav-link">
+                📊 DASHBOARD
+            </a>
+            <a href="debug.html" class="nav-link active">
+                🔧 DEBUG PANEL
+            </a>
+        </div>
     </div>
 
     <!-- Navigation -->
