🔧 DEBUG PANEL FIX: Added standalone mode support
✅ Fixed debug panel loading issues:
- Added standalone mode for direct debug panel access
- Integrated ML Accuracy Enhancer in debug.html
- Enhanced connectToMainDashboard() with fallback support
- Fixed JavaScript syntax errors in debug-panel-core.js
- Debug panel now works independently without main dashboard

🔗 Navigation improvements:
- Debug panel loads ML enhancer directly
- Better error handling for disconnected mode
- Simulated data fallback for testing

Should fix 'Connecting to main dashboard...' stuck message!

--- a/debug.html
+++ b/debug.html
@@ -424,14 +424,17 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="js/debug-panel.js"></script>
+    <script src="js/ml-accuracy-enhancer.js"></script>
+    <script src="js/debug-panel-core.js"></script>
     <script>
         // Initialize debug panel
         document.addEventListener('DOMContentLoaded', function() {
             console.log('🔬 Debug Panel started');
-            initializeDebugPanel();
-            checkSystemHealth();
-            setInterval(updateLiveMetrics, 5000); // Update every 5 seconds
+            
+            // Initialize debug panel with ML support
+            window.debugPanel = new DebugPanel();
+            
+            console.log('✅ Debug Panel initialized with ML support');
         });
     </script>
 </body>
