--- a/debug.html
+++ b/debug.html
@@ -175,6 +175,7 @@
             background: rgba(255, 255, 255, 0.05);
             border-radius: 20px;
             padding: 30px;
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
