🔧 FIX: Corrected script path to script.js

--- a/index_ORIGINAL_WORKING.html
+++ b/index_ORIGINAL_WORKING.html
@@ -136,6 +136,6 @@
     </div>
 
     <!-- Original Working JavaScript -->
-    <script src="js/script.js"></script>
+    <script src="js/script_github.js"></script>
 </body>
 </html>
