--- a/index.html
+++ b/index.html
@@ -136,6 +136,6 @@
     </div>
 
     <!-- Original Working JavaScript -->
-    <script src="js/script.js"></script>
+    <script src="js/script_github.js"></script>
 </body>
 </html>
